goals-web/deployment-v1.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: goals-web-v1
  namespace: prod
spec:
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
         app: goals-web
         version: v1
    spec:
      containers:
      - name: goals-web
        image: cjvogel1972/goals-web:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: goals-web
    version: v1
  name: goals-web-svc-v1
  namespace: prod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: goals-web
    version: v1
  type: ClusterIP
