goals-web/egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: goal-backend-ext
  namespace: prod
spec:
  hosts:
  - goal-backend.istio.toddelewis.net
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
